--- a/output/src/main/AndroidManifest.xml
+++ b/output/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.android.things.contrib.driver.output">
+    package="br.com.autodoc.output">
     <application>
         <uses-library android:required="false" android:name="com.google.android.things"/>
     </application>
